# app-graphics

./: ThomasBS.txt
gcom/: CMakeLists.txt  Package.appxmanifest  _.h  aaa__library.h  deployment.rc  framework.cpp  gcom.cbp  gcom.vcxproj  gcom.vcxproj.filters  graphics.cbp  graphics.h  graphics.vcxproj.filters  image_show.cpp  image_show.h  m_gcom.vcxproj  m_gcom.vcxproj.filters  nord_gcom.vcxproj  nord_gcom.vcxproj.filters  u_gcom.def  u_gcom.vcxproj  u_gcom.vcxproj.filters  w_gcom.vcxproj.filters  winmetro_graphics.cpp  winmetro_graphics.vcxproj  winmetro_graphics.vcxproj.filters
gcom/backimpact/: _.h  _constant.h  aaa_interface.h  data.cpp  data.h  gcom.cpp  gcom.h  helper.cpp  helper.h  image_change.cpp  image_change.h  main.cpp  main.h  thread.cpp  thread.h  transition_effect.cpp  transition_effect.h  transition_effect_tool001.cpp  user_interaction.cpp  user_interaction.h  visual_effect.cpp  visual_effect.h
gcom/gcom/: _.h  _constant.h  aaa__library.h  double3d_point.h  f64_point3d.h  impact.cpp  impact.h  ipp.cpp  pixel_explosion.cpp  pixel_explosion.h  slide.cpp  slide.h  slide_drawer.h  space.cpp  space.h  space_util.cpp  util.cpp
gcom/gcom.xcodeproj/: project.pbxproj
